# PicrossSDL

./: README.md
picross/: CMakeLists.txt
picross/graphics/: 0  1  2  3  4  5  6  7  8  9
picross/src/: Picross.cpp  board.cpp  board.h  renderer.cpp  renderer.h
